# DPHPC-project

./: README.md  euler.sh
deriche/: Makefile  compile_run.py  compile_run_config.json  compile_run_config_gpu.json  compile_run_config_multi-node-final.json  compile_run_config_single-node-final.json  compile_run_gpu.py  deriche.h  polybench_helpers.h  scatter_shuffle_reduce.h
deriche/MPI/: CMakeLists.txt  Makefile  deriche_mpi.c  polybench_helpers.h  scatter_shuffle_reduce.h
deriche/MPI_cuda/: Makefile  deriche_mpi_cuda.cu  scatter_shuffle_reduce_cu.h
deriche/MPI_kokkos/: CMakeLists.txt  Makefile  dericheKokkos.cpp  deriche_bench.cpp  scattergatherreduce.h
deriche/MPI_omp/: CMakeLists.txt  Makefile  deriche.h  deriche_bench.cpp  deriche_mpi_omp.c  polybench_helpers.h  scatter_shuffle_reduce.h
deriche/cuda/: CMakeLists.txt  Makefile  batch_script.sh  deriche_bench.cpp  deriche_cuda.cu  deriche_ref.out  preliminary_bench.txt  test.cu
deriche/kokkos/: CMakeLists.txt  Makefile  deriche.cpp  deriche.h  deriche_bench.cpp
deriche/kokkos_gpu/: Makefile  deriche_kokkos_gpu.cpp
deriche/omp/: Makefile  deriche_bench.cpp  deriche_omp.c
deriche/sequential/: Makefile  bench_util.cpp  deriche.c  deriche_bench.cpp
lu/: compile_run.py  compile_run_config.json  compile_run_config_gpu.json  compile_run_config_multi-node-final.json  compile_run_config_single-node-final.json  compile_run_gpu.py
lu/lu_cuda_blocked/: CMakeLists.txt  lu.cpp  lu.h  lu_bench.cpp  makefile  matrix_operations.cu  matrix_operations_seq.h  matrix_util.cpp
lu/lu_cuda_global/: CMakeLists.txt  lu.cpp  lu.h  lu_bench.cpp  makefile  matrix_operations_global.cu  matrix_operations_seq.cpp  matrix_operations_seq.h  matrix_util.cpp  matrix_util.h
lu/lu_cuda_shared/: README.md  lu.cpp  lu.h  makefile  matrix_operations_global.cu  matrix_operations_seq.cpp  matrix_util.h
lu/lu_kokkos/: CMakeLists.txt  lu.cpp  lu_bench.cpp  matrix_operations.cpp  matrix_operations.h
lu/lu_kokkos_dag/: lu.cpp  lu_bench.cpp  matrix_operations.cpp  matrix_operations.h
lu/lu_kokkos_gpu/: Makefile  lu.cpp  lu_bench.cpp
lu/lu_mpi_kokkos/: CMakeLists.txt  lu.cpp  lu.h  lu_bench.cpp  matrix_operations.cpp  matrix_util.cpp  matrix_util.h
lu/lu_mpi_omp/: compile_and_run.sh  lu.cpp  lu.h  lu_bench.cpp  makefile  matrix_operations.cpp  matrix_operations.h  matrix_util.cpp  matrix_util.h  test.cpp
lu/lu_omp/: README.md  bench_util.h  lu.cpp  lu_bench.cpp  makefile  matrix_operations.cpp  test.cpp
lu/lu_sequential/: lu.cpp  lu_bench.cpp  makefile  matrix_operations.h
statistics/: graph_plotting.py  graph_plotting_gpu.py  qq-plotting.py  summary_statistics_print.py
